# ctrdecrypt

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ctrdecrypt-build.yml  linux-build.yml  macos-build.yml  rust.yml  windows-build.yml
src/: ctrutils.rs  main.rs
