[package]
name = "ctrdecrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
hex-literal="0.3.3"
aes = "0.8.4"
cbc = {version ="0.1.2", features = ["std"]}
sha256 = "1.4.0"
attohttpc = "0.28.0"
block-padding = "0.3.3"
ctr = "0.9.2"
byteorder = "1.5.0"